# RLfromVerifiableRewards

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: eval.yaml  model.yaml  paths.yaml  reward.yaml
rlvr/envs/: mbpp.py
rlvr/eval/: report.py
rlvr/rewards/: code_tests.py
rlvr/sampling/: generate.py
rlvr/sandbox/: runner.py
rlvr/training/: awr.py  ppo_lite.py
rlvr/utils/: jax_helpers.py
scripts/: run_demo.py  run_eval.py
tests/: test_repo_bootstrap.py
